--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "doctrine/dbal": "^2.5",
         "bosnadev/repositories": "^0.13.0",
+        "paragonie/random_compat": "^2.0",
         "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
