--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "doctrine/dbal": "^2.5",
         "bosnadev/repositories": "^0.13.0",
         "paragonie/random_compat": "^2.0",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "overtrue/laravel-lang": "~3.0"
     },
     "autoload": {
         "psr-4": {
