--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "bosnadev/repositories": "^0.13.0",
         "paragonie/random_compat": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "zedisdog/laravel-schema-extend": "^1.3",
         "overtrue/laravel-lang": "~3.0"
     },
     "autoload": {
