--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     }
   ],
   "require": {
+    "laravel/framework": "^8.0",
     "bkwld/croppa": "^4.9",
     "league/fractal": "^0.17.0",
-    "zedisdog/laravel-schema-extend": "^1.3",
     "overtrue/laravel-lang": "~3.0"
   },
   "autoload": {
